@@ -2,11 +2,11 @@
 
 [assembly: AssemblyCompany("Digimezzo")]
 [assembly: AssemblyCopyright("Copyright Digimezzo © 2013 - 2017")]
-[assembly: AssemblyVersion("1.1.0.491")]
-[assembly: AssemblyFileVersion("1.1.0.491")]
+[assembly: AssemblyVersion("1.1.1.492")]
+[assembly: AssemblyFileVersion("1.1.1.492")]
 
 #if DEBUG
-[assembly: AssemblyInformationalVersion("1.1.0.491 Preview")]
+[assembly: AssemblyInformationalVersion("1.1.1.492 Preview")]
 #else
-[assembly: AssemblyInformationalVersion("1.1.0.491")]
+[assembly: AssemblyInformationalVersion("1.1.1.492")]
 #endif
