@@ -1,3 +1,9 @@
+2017-03-13: Knowte 1.1.1 Build 492 (Release)
+--------------------------------------------
+
+- [Fixed] Changing storage location doesn't move the current notes to the new storage location
+
+
 2017-03-13: Knowte 1.1 Build 491 (Release)
 ------------------------------------------
 
